network-policy/03-allow-backend-ingress-from-client.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-ingress-from-client
  namespace: microseg-demo
spec:
  podSelector:
    matchLabels:
      app: backend-nginx
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: client-netshoot
      ports:
        - protocol: TCP
          port: 80
